--- a/notebooks/analysis.ipynb
+++ b/notebooks/analysis.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "2904fd4a",
    "metadata": {},
    "outputs": [
@@ -29,7 +29,7 @@
     "import sys\n",
     "sys.path.append('../src')\n",
     "\n",
-    "from visualize import ResultsVisualizer, ModelEvaluator\n",
+    "from visualize import ResultsVisualizer \n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Initialize visualizer\n",
