--- a/notebooks/analysis.ipynb
+++ b/notebooks/analysis.ipynb
@@ -555,6 +555,18 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff0e52f6",
+   "metadata": {},
+   "source": [
+    "## 9. Interpretation\n",
+    "\n",
+    "- **Green bars**: Features that increase P(income > 50K)\n",
+    "- **Red bars**: Features that decrease P(income > 50K)\n",
+    "- Weight magnitude indicates feature importance"
+   ]
   }
  ],
  "metadata": {
