--- a/notebooks/analysis.ipynb
+++ b/notebooks/analysis.ipynb
@@ -62,7 +62,7 @@
    "id": "bb1b7339",
    "metadata": {},
    "source": [
-    "## 1. Load Pre-Split Data and Model\n",
+    "## 1. Load data and model\n",
     "\n",
     "We use pre-split data to ensure reproducibility and fair evaluation."
    ]
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "e9f8ddc1",
    "metadata": {},
    "outputs": [
@@ -140,7 +140,7 @@
     "ax1.plot(logreg.losses, linewidth=2, color='#2E86AB')\n",
     "ax1.set_xlabel('Iteration', fontsize=12)\n",
     "ax1.set_ylabel('Loss (Binary cross-entropy + L2)', fontsize=12)\n",
-    "ax1.set_title('Training Loss over iterations', fontsize=14, fontweight='bold')\n",
+    "ax1.set_title('Training loss over iterations', fontsize=14, fontweight='bold')\n",
     "ax1.grid(alpha=0.3)\n",
     "\n",
     "# Learning rate decay curve (if available)\n",
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "7e810a70",
    "metadata": {},
    "outputs": [
@@ -310,10 +310,10 @@
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "print(f\"\\nTrue Negatives:  {cm[0][0]:5d}\")\n",
-    "print(f\"False Positives: {cm[0][1]:5d}\")\n",
-    "print(f\"False Negatives: {cm[1][0]:5d}\")\n",
-    "print(f\"True Positives:  {cm[1][1]:5d}\")"
+    "print(f\"\\nTrue negatives:  {cm[0][0]:5d}\")\n",
+    "print(f\"False positives: {cm[0][1]:5d}\")\n",
+    "print(f\"False negatives: {cm[1][0]:5d}\")\n",
+    "print(f\"True positives:  {cm[1][1]:5d}\")"
    ]
   },
   {
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "2cf2041c",
    "metadata": {},
    "outputs": [
@@ -392,7 +392,7 @@
     "           ha='center', va='bottom', fontsize=11, fontweight='bold')\n",
     "\n",
     "ax.set_ylabel('Score', fontsize=12)\n",
-    "ax.set_title('Model Performance Metrics', fontsize=14, fontweight='bold')\n",
+    "ax.set_title('Model performance metrics', fontsize=14, fontweight='bold')\n",
     "ax.set_ylim([0, 1.1])\n",
     "ax.grid(axis='y', alpha=0.3)\n",
     "plt.tight_layout()\n",
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "25532a12",
    "metadata": {},
    "outputs": [
@@ -510,8 +510,8 @@
     "ax.barh(range(len(top_features)), top_features['Weight'], color=colors, alpha=0.7)\n",
     "ax.set_yticks(range(len(top_features)))\n",
     "ax.set_yticklabels(top_features['Feature'])\n",
-    "ax.set_xlabel('Weight Value', fontsize=12)\n",
-    "ax.set_title(f'Top {top_n} Feature Weights', fontsize=14, fontweight='bold')\n",
+    "ax.set_xlabel('Weight value', fontsize=12)\n",
+    "ax.set_title(f'Top {top_n} Feature weights', fontsize=14, fontweight='bold')\n",
     "ax.axvline(x=0, color='black', linestyle='-', linewidth=0.8)\n",
     "ax.grid(axis='x', alpha=0.3)\n",
     "\n",
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "id": "a342e56e",
    "metadata": {},
    "outputs": [
@@ -591,7 +591,7 @@
     "ax1.fill_between(z_range, 0, sigmoid_values, where=(sigmoid_values < 0.5), \n",
     "                  alpha=0.2, color='red', label='Predict: ≤50K')\n",
     "\n",
-    "ax1.set_xlabel('z = w^T x + b (Linear Combination)', fontsize=12)\n",
+    "ax1.set_xlabel('z = w^T x + b (Linear combination)', fontsize=12)\n",
     "ax1.set_ylabel('σ(z) = P(income > 50K)', fontsize=12)\n",
     "ax1.set_title('Sigmoid activation function', fontsize=14, fontweight='bold')\n",
     "ax1.legend(fontsize=10)\n",
@@ -612,7 +612,7 @@
     "\n",
     "ax2.hist(proba_class0, bins=50, alpha=0.6, color='red', label='Actual: ≤50K', edgecolor='black')\n",
     "ax2.hist(proba_class1, bins=50, alpha=0.6, color='green', label='Actual: >50K', edgecolor='black')\n",
-    "ax2.axvline(x=0.5, color='blue', linestyle='--', linewidth=2, label='Decision Threshold')\n",
+    "ax2.axvline(x=0.5, color='blue', linestyle='--', linewidth=2, label='Decision threshold')\n",
     "\n",
     "ax2.set_xlabel('Predicted probability P(income > 50K)', fontsize=12)\n",
     "ax2.set_ylabel('Number of samples', fontsize=12)\n",
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "id": "4a21a5f8",
    "metadata": {},
    "outputs": [
@@ -726,7 +726,7 @@
     "\n",
     "ax.set_xlabel('Decision threshold', fontsize=12)\n",
     "ax.set_ylabel('Score', fontsize=12)\n",
-    "ax.set_title('Threshold optimization for Best F1 score', fontsize=14, fontweight='bold')\n",
+    "ax.set_title('Threshold optimization for best F1 score', fontsize=14, fontweight='bold')\n",
     "ax.legend(fontsize=10)\n",
     "ax.grid(alpha=0.3)\n",
     "\n",
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "id": "fa62189b",
    "metadata": {},
    "outputs": [
@@ -858,12 +858,12 @@
     "width = 0.35\n",
     "\n",
     "bars1 = ax4.bar(x - width/2, metrics_analysis['Current'], width, \n",
-    "                label='Current Model', color='#2E86AB', alpha=0.7)\n",
+    "                label='Current model', color='#2E86AB', alpha=0.7)\n",
     "bars2 = ax4.bar(x + width/2, metrics_analysis['Theoretical Max'], width,\n",
-    "                label='Realistic Maximum', color='#F18F01', alpha=0.7)\n",
+    "                label='Realistic maximum', color='#F18F01', alpha=0.7)\n",
     "\n",
     "ax4.set_ylabel('Score', fontsize=12)\n",
-    "ax4.set_title('Current vs. Realistic Maximum\\n(Due to Class Overlap)', fontsize=14, fontweight='bold')\n",
+    "ax4.set_title('Current vs. realistic maximum\\n(Due to class overlap)', fontsize=14, fontweight='bold')\n",
     "ax4.set_xticks(x)\n",
     "ax4.set_xticklabels(metrics_analysis['Metric'])\n",
     "ax4.legend(fontsize=10)\n",
