--- a/report/references.bib
+++ b/report/references.bib
@@ -24,11 +24,9 @@
   title     = {Beyond Multiple Linear Regression: Applied Generalized Linear Models and Multilevel Models in R},
   author    = {Paul Roback and Julie Legler},
   year      = {2021},
-  publisher = {CRC Press},
-  chapter   = {4},
-  titleaddon = {Poisson Regression},
+  publisher = {Chapman and Hall/CRC},
   url       = {https://bookdown.org/roback/bookdown-BeyondMLR/ch-MLRreview.html},
-  note      = {Хандсан: 2025-10-15},
+  note      = {Accessed: 2025-11-21}
 }
 @Book{r_aer,
   title = {Applied Econometrics with {R}},
@@ -40,12 +38,12 @@
   url = {https://CRAN.R-project.org/package=AER},
 }
 @article{schober2018,
-  author    = {Schober, P. and Vetter, T. R. and Haller, G.},
-  title     = {Correlation Coefficients: Appropriate Use and Interpretation},
-  journal   = {Anesthesia & Analgesia},
-  year      = {2018},
-  volume    = {126},
-  number    = {5},
-  pages     = {1763--1768},
-  doi       = {10.1213/ANE.0000000000002864}
+  title   = {Correlation Coefficients: Appropriate Use and Interpretation},
+  author  = {Patrick Schober and Christa Boer and Lothar A. Schwarte},
+  journal = {Anesthesia \& Analgesia},
+  volume  = {126},
+  number  = {5},
+  pages   = {1763--1768},
+  year    = {2018},
+  doi     = {10.1213/ANE.0000000000002864}
 }
