--- a/report/title.tex
+++ b/report/title.tex
@@ -1,7 +1,7 @@
+% Custom macros and packages for the report
+\usepackage{tcolorbox}
+\usepackage{xcolor}
+
 % Safe macro definitions (only define if not already defined)
-\providecommand{\myterm}{\textbf{Important Term}}
-
-% Simple boxed text macro (uses fbox; for richer styling load tcolorbox instead)
+\providecommand{\myterm}[1]{\textbf{#1}}
 \providecommand{\mybox}[1]{\fbox{\strut #1}}
-
-% If you previously loaded a different version elsewhere, remove that duplicate.
