--- a/report/references.bib
+++ b/report/references.bib
@@ -47,3 +47,9 @@
   year    = {2018},
   doi     = {10.1213/ANE.0000000000002864}
 }
+@book{logreg,
+  title = {Logistic Regression Basics},
+  author = {Example, A.},
+  year = {2021},
+  publisher = {Stat Press}
+}
