--- a/report/statreport.qmd
+++ b/report/statreport.qmd
@@ -1,91 +1,104 @@
----
-title: "Орлогын Таамаглалын Статистик Шинжилгээ / Income Prediction"
-author: "Javkhlan"
-date: last-modified
-lang: mn
-bibliography: references.bib
-format:
-  pdf:
-    toc: true
-  html:
-    toc: true
----
+# Оршил
 
-# Оршил (Introduction)
+Энэ төслийн зорилго нь хувь хүний жилийн орлого **\$50,000-аас дээш ($>50\text{K}$)** эсэхийг урьдчилан таамаглах логистик регрессийн загвар боловсруулах явдал юм. Үүний тулд бид Adult Income өгөгдлийн санг ашиглаж, хоёртын ангиллын асуудлыг дотооддоо хэрэгжүүлсэн градиент бууруулалтын аргаар шийдвэрлэсэн.
 
-Энэ төслийн зорилго нь Adult Income өгөгдлийн санг ашиглан хувь хүн жилийн орлого >50K эсэхийг таамаглах юм. Бид өөрсдийн хэрэгжүүлсэн логистик регресс загварыг sklearn Pipeline-той хослуулан ашигласан. Загвар нь L2 регуляризацитай, batch градиент бууруулалтаар суралцаж, сурах хурдны бууралт хэрэглэдэг.
+Манай загвар дараах онцлогуудтай:
 
-Логистик магадлалын загвар:
-$$
-P(Y=1\mid X=x) \;=\; \sigma\!\big(w^\top x + b\big) \;=\; \frac{1}{1 + e^{-\big(w^\top x + b\big)}}
-$$ {#eq-logreg}
+- Гараас хэрэгжүүлсэн логистик регресс (градиент бууруулалт, L2 регуляризаци, сурах хурдны бууралт)
+- Sklearn Pipeline ашигласан урьдчилсан боловсруулалт (стандартчилал, one-hot кодчилол)
+- Ангиудын тэнцвэргүй байдлыг харгалзан `class_weight="balanced"` ашигласан
+- Сургалт–баталгаажуулалтын тусдаа салгалт болон тогтвортой турших боломжтой бүтэц
 
-Сургалтын алдагдал (хоёртын cross-entropy + L2):
-$$
-J(w,b)\;=\; -\frac{1}{m}\sum_{i=1}^{m}\Big[y^{(i)}\log\hat{y}^{(i)} + \big(1-y^{(i)}\big)\log\!\big(1-\hat{y}^{(i)}\big)\Big] \;+\; \frac{\lambda}{2m}\,\lVert w\rVert^2
-$$
+# Өгөгдөл
 
-Сурах хурдны бууралт:
-$$
-\alpha_t \;=\; \frac{\alpha_0}{1 + \text{decay}\cdot t}
-$$
+## Өгөгдлийн эх үүсвэр ба зорилго
 
-Pipeline:
-- Тоон шинжүүд → StandardScaler
-- Категори шинжүүд → OneHotEncoder(handle_unknown="ignore")
-- Классын жин → class_weight="balanced"
+Adult Income Dataset нь АНУ-ын 1994 оны Хүн амын тооллогын түүвэр мэдээлэлд тулгуурладаг. Нас, боловсрол, мэргэжил, гэрлэлтийн байдал, хүйс гэх мэт нийгэм-эдийн засгийн үзүүлэлтүүд багтдаг.
 
-# Өгөгдөл (Data)
+Зорилтот хувьсагч:
 
-Эх сурвалж: Adult Income (Census Bureau). Зорилтот хувьсагч: `income_>50K` (0/1). Өгөгдөл нь тоон ба категори шинжүүдийн холимог бөгөөд ангиудын тэнцвэргүй байдал ажиглагдана (>50K нь цөөн).
+- `income_>50K`  
+  - 0 → $\le 50\text{K}$  
+  - 1 → $>50\text{K}$  
 
-1) Ашигласан ба унагаасан хувьсагчид (сплит хийх шатанд цөөлсөн)
-- Ашигласан (kept)
-  - Тоон: `age`, `educational-num`, `capital-gain`, `capital-loss`, `hours-per-week`
-  - Категори: `education`, `marital-status`, `occupation`, `gender`
-- Унагаасан (dropped) — давхардал/тайлбарлах ач холбогдол бага, эсвэл дуу чимээ ихтэй баганууд:
-  - Жишээлбэл: `workclass`, `fnlwgt`, `relationship`, `race`, `native-country`, бусад үл ашигласан бүх баганууд
+Нийт ойролцоогоор $44{,}000$ мөртэй. Үүнээс $80\%$ нь сургалтад ($35{,}165$), $20\%$ нь баталгаажуулалтад ($8{,}792$) ашиглагдсан.
 
-2) Хуваалт
-- 80% сургалт, 20% баталгаажуулалт (stratify=`income_>50K`)
-- Хуваасны дараа зөвхөн дээрх kept баганууд болон зорилтот багана бүхий `train_split.csv`, `val_split.csv` файлд хадгалсан
+## Ангиудын тэнцвэргүй байдал
 
-3) Урьдчилсан боловсруулалт
-- Тоон шинжүүдийг стандартчилж, категори шинжүүдийг one-hot кодчилно
-- Үүссэн онцлог вектор дээр логистик регресс сургав:
-  - learning_rate ≈ 0.1, max_iter ≈ 800, reg_lambda = 1e-4, lr_decay = 1e-4
-  - class_weight = "balanced", threshold = 0.5
+Өгөгдлийн гол сорилт бол зорилтот ангиудын тэнцвэргүй байдал юм.
 
-4) Ангиудын тэнцвэргүй байдал
-- ≤50K анги нь давамгай (ихэнх), >50K анги нь цөөн тул F1/Recall зэрэг тэнцвэртэй үзүүлэлтүүдийг давхар харна. Cross-entropy алдагдал болон жинлэлт нь цөөн ангийг үл тоомсорлохоос сэргийлдэг.
+- $\le 50\text{K}$ → **76%**
+- $>50\text{K}$ → **24%**
 
-# Логистик загвар / Logistic Model
+Иймээс:
 
-$$
-P(Y=1\\mid X=x)=\\sigma(w^T x + b)=\\frac{1}{1+e^{-(w^T x + b)}}
-$$ {#eq-logreg}
+- Энгийн "бүгдийг $\le 50\text{K}$ гэж таамагладаг" загвар хүртэл $\approx$**76%accuracy** үзүүлж чадна  
+- Гэхдээ энэ нь хэрэгцээгүй тул **Recall**, **Precision**, **F1-score** илүү чухал үзүүлэлтүүд болдог
 
-Дээрх @eq-logreg тэгшитгэл нь магадлалыг сигмоид функцээр дүрслэнэ.
+Тиймээс бид зөвхөн accuracy бус, ангиудын тэнцвэртэй үзүүлэлтийг үндсэн үнэлгээнд ашигласан.
 
-# Кирилл үсгийн тест / Cyrillic Smoke Test
+## Онцлогийн сонголт
 
-Доорх мөрүүд зөв гарч буй эсэхийг PDF дээр шалгана:
+Өгөгдөл анх олон тооны баганатай бөгөөд зарим нь хоорондоо их давхцдаг.  
+Загварыг удирдахад амархан байлгах үүднээс онцлогуудыг дараах байдлаар сонгов.
 
-Монгол хэлний кирилл: Үүнд ө, ү, ч, ж, й, һ, ё тэмдэгтүүд орно.  
-Туршилт өгөгдөл: “Сургалтын загвар амжилттай ажиллалаа.”  
-English fallback: Model trained successfully.
+### Ашигласан онцлогууд (9)
 
-# Үзүүлэлт / Metrics
+**Тоон (5):**
+`age`,  `educational-num`,  `capital-gain`,  `capital-loss`,  `hours-per-week`
 
-| Metric       | Value |
-|-------------|-------|
-| Accuracy     | 0.85   |
-| Precision    | 0.79   |
-| Recall       | 0.72   |
-| F1 Score     | 0.75   |
+**Категори (4):**
+`education`,  `marital-status`,  `occupation`,  `gender`
 
-# Дүгнэлт / Conclusion
+### Хассан онцлогууд
 
-Энэхүү тайлан нь Adult Income өгөгдлийн сан дээр логистик регресс ашиглан орлого >50K эсэхийг таамаглахад чиглэсэн. Логистик регресс нь хоёр ангиллын хоорондох магадлалыг загварчлахад ашиглагддаг статистикийн үндсэн арга юм. Манай загвар нь 85% үнэн зөв, 79% нарийвчлал, 72% сануулга, 75% F1 оноо үзүүлсэн. Эдгээр үзүүлэлтүүд нь ангиллын тэнцвэргүй байдлыг харгалзан үзэхэд чухал ач холбогдолтой.
+`workclass`, `fnlwgt`, `relationship`, `race`, `native-country` гэх мэт —  
+Эдгээрийг хассан гол шалтгаанууд:
+
+- зарим нь давхацдаг (`education` vs `educational-num`)  
+- загварын гүйцэтгэлд мэдэгдэхүйц хувь нэмэр оруулахгүй  
+- шаардлагагүй шуугиан үүсгэх хандлагатай  
+
+Зорилго нь **тэнцвэртэй, ойлгомжтой, илүүдэлгүй** онцлогийн багц гаргах явдал байв.
+
+## Өгөгдөл хуваах стратеги
+
+Бид өгөгдлийг стратифик хуваалт ашиглан **80/20** харьцаагаар салгасан.
+
+Үр дүн:
+
+- Ангиудын харьцаа ижил хадгалагдсан  
+- Туршилт бүрт тогтвортой үр дүн гардаг  
+- Pipeline-д урьдчилсан боловсруулалт болон сургалт логик дарааллаар холбогдох боломжтой
+
+## Урьдчилсан боловсруулалт
+
+### Тоон онцлогууд
+
+`StandardScaler` ашиглаж:
+
+- дундаж: $\mu = 0$  
+- стандарт хазайлт: $\sigma = 1$  
+
+Ингэснээр градиент бууруулалтын тогтвортой байдал сайжирдаг.
+
+### Категори онцлогууд
+
+`OneHotEncoder(handle_unknown='ignore')` ашигласан.
+Жишээ нь:  
+`education=Bachelors` → `education_Bachelors=1`, бусад 0.
+
+**Классын жин:**  
+`class_weight='balanced'` нь цөөн ангийг илүү чухалчилж, L2 loss-д илүү жин өгдөг.
+
+**Гиперпараметрүүдийн ерөнхий утгууд:**
+
+- learning_rate $\approx$ 0.1  
+- max_iter $\approx$ 800  
+- reg_lambda = 1e-4  
+- lr_decay = 1e-4  
+- threshold = 0.5  
+
+Эдгээр нь тогтвортой, илүү тэнцвэртэй сургалтыг хангадаг.
 
 # Ном зүй / References
